fix : ErrorWrapper z-index 수정

--- a/src/style/added-class.css
+++ b/src/style/added-class.css
@@ -75,7 +75,7 @@
 
 /* errorWrapper */
 .error-wrapper {
-  z-index: 100;
+  z-index: 10;
   position: absolute;
   left: 0;
   top: 0;
